// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header unit tests should render correctly - mobile 1`] = `
.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  font-size: 12px;
  margin: 0 5px;
}

.c14 {
  background: none;
  border: none;
  outline: none;
  color: black;
  padding: 5px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c14:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: pointer;
  height: 22px;
  margin: 0 10px;
  min-width: 30px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
  width: 30px;
}

.c4 span {
  background: #666666;
  border-radius: 10px;
  height: 2px;
  left: 0;
  opacity: 1;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
  width: 100%;
}

.c4 span:nth-child(1) {
  top: 0;
}

.c4 span:nth-child(2),
.c4 span:nth-child(3) {
  top: 10px;
}

.c4 span:nth-child(4) {
  top: 20px;
}

.c5 {
  position: absolute;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  top: 61px;
  left: -100vw;
  background: #666666;
  color: #fff;
  width: 100vw;
  height: calc(100vh - 61px);
  overflow: auto;
}

.c6 {
  list-style: none;
  padding-left: 0;
  margin: 0;
}

.c7 {
  display: block;
  font-size: 18px;
  font-weight: 100;
  list-style: none;
  padding: 20px 30px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 :after {
  content: '';
  position: absolute;
  opacity: 0.5;
  height: 1px;
  width: 85%;
  background-color: #fff;
  bottom: 0;
  left: 50%;
  -webkit-transform: translate(-50%);
  -ms-transform: translate(-50%);
  transform: translate(-50%);
}

.c7 span {
  color: #fff;
  padding-left: 30px;
}

.c7 svg {
  color: #fff;
}

.c8 {
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 15;
  background: #f7f7F7;
  padding: 5px 10px;
  border-bottom: 1px solid #fff;
  color: #0d171b;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 15px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c12 {
  background: #6d6e71;
  border-radius: 5px;
  color: #fff;
  cursor: pointer;
  font-size: 16px;
  padding: 10px;
}

.c10 {
  height: 50px;
  padding: 5px 0;
}

@media screen and (max-width:640px) {

}

@media screen and (max-width:640px) {

}

@media screen and (max-width:640px) {
  .c12 {
    font-size: 14px;
  }
}

<div>
  <header
    class="c0"
    id="header"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-testid="burger-menu"
        >
          <div
            class="c4"
            id="burger-bars"
          >
            <span />
            <span />
            <span />
            <span />
          </div>
          <div
            class="c5"
          >
            <ul
              class="c6"
            >
              <li
                class="c7"
              >
                <a
                  class="c8"
                  href="/"
                  id="burger-link-home"
                >
                  A propos
                </a>
              </li>
              <li
                class="c7"
              >
                <a
                  class="c8"
                  href="/blog"
                  id="burger-link-blog"
                >
                  Actualités
                </a>
              </li>
              <li
                class="c7"
              >
                <a
                  class="c8"
                  href="/calendar"
                  id="burger-link-calendar"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                    />
                  </svg>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <a
          class="c9"
          data-testid="title-link"
          href="/"
          id="logo-link"
        >
          <img
            alt="logo"
            class="3 c10"
            src="/logo.png"
          />
        </a>
      </div>
      <div
        class="c11"
      >
        <a
          class="2 c12"
          href="/join"
          id="join-link"
        >
          Adhérer gratuitement
        </a>
        <div
          class="c13"
        >
          <a
            class="c14"
            data-testid="select-en"
            href="/"
            id="select-en"
          >
            EN
          </a>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header unit tests should render correctly 1`] = `
.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  font-size: 12px;
  margin: 0 5px;
}

.c10 {
  background: none;
  border: none;
  outline: none;
  color: black;
  padding: 5px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  height: 30px;
  margin: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #999999;
  cursor: pointer;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  color: #666666;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 15;
  background: #f7f7F7;
  padding: 5px 10px;
  border-bottom: 1px solid #fff;
  color: #0d171b;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 15px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c8 {
  background: #6d6e71;
  border-radius: 5px;
  color: #fff;
  cursor: pointer;
  font-size: 16px;
  padding: 10px;
}

.c4 {
  height: 70px;
  padding: 5px 0;
}

@media screen and (max-width:640px) {
  .c5 {
    font-size: 14px;
    padding: 0;
    margin: 0 10px;
  }
}

@media screen and (max-width:640px) {
  .c6 {
    padding: 0 10px;
  }
}

@media screen and (max-width:640px) {
  .c8 {
    font-size: 14px;
  }
}

<div>
  <header
    class="c0"
    id="header"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3"
          data-testid="title-link"
          href="/"
          id="logo-link"
        >
          <img
            alt="logo"
            class="3 c4"
            src="/logo.png"
          />
        </a>
        <nav>
          <ul
            class="c5"
            data-testid="navbar"
          >
            <li>
              <a
                class="c6"
                href="/"
                id="nav-link-home"
              >
                A propos
              </a>
            </li>
            <li>
              <a
                class="c6"
                href="/blog"
                id="nav-link-blog"
              >
                Actualités
              </a>
            </li>
            <li>
              <a
                class="c6"
                href="/calendar"
                id="nav-link-calendar"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                  />
                </svg>
              </a>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="c7"
      >
        <a
          class="2 c8"
          href="/join"
          id="join-link"
        >
          Adhérer gratuitement
        </a>
        <div
          class="c9"
        >
          <a
            class="c10"
            data-testid="select-en"
            href="/"
            id="select-en"
          >
            EN
          </a>
        </div>
      </div>
    </div>
  </header>
</div>
`;
